day 05: HTML5 basics - web forms 2.0

--- a/day_05/index.html
+++ b/day_05/index.html
@@ -2,9 +2,24 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>HTML5 Review</title>
   </head>
   <body>
+    <!--
+    1. HTML5 new tags
+    2. HTML5 custom attributes
+    3. web froms 2.0
+      datetime
+      datetime-local
+      date
+      month
+      week
+      time
+      number
+      range
+      email
+      url
+    //-->
     <header>
       <h1>HTML5 Document Structure Example</h1>
       <p>This page should be tried in safari, chrome or Mozila.</p>
@@ -23,6 +38,19 @@
           <p>Once article can have multiple sections</p>
         </section>
       </article>
+      <form action = "#" method = "get">
+       Date and Time : <input type = "datetime" name = "newinput1" /><br>
+       Date and Time Local : <input type = "datetime-local" name = "newinput2" /><br>
+       Date : <input type = "date" name = "newinput3" /><br>
+       Month : <input type = "month" name = "newinput4" /><br>
+       Week : <input type = "week" name = "newinput5" /><br>
+       Time : <input type = "time" name = "newinput6" /><br>
+       Number : <input type = "number" name = "newinput7" /><br>
+       range : <input type = "range" name = "newinput8" /><br>
+       E-mail : <input type = "email" name = "newinput9" /><br>
+       <input type = "submit" value = "submit" />
+     </form>
+
       <aside>
         <!-- This tag represents a piece of content that is only slightly related to the rest of the page //-->
         <p>This is aside part of the web page</p>
